# Anamnesis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  NOTICE  README.md  README.zh-CN.md  deny.toml  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-crates.yml  release.yml
anamnesis-plugin/: .codex-mcp.json  .mcp.json  CHANGELOG.md  README.md
anamnesis-plugin/.claude-plugin/: plugin.json
anamnesis-plugin/.codex-plugin/: plugin.json
anamnesis-plugin/commands/: anamnesis-search.md  anamnesis-status.md
anamnesis-plugin/skills/anamnesis-memory/: SKILL.md
crates/adapter-claude-code/: Cargo.toml
crates/adapter-claude-code/src/: detector.rs  frontmatter.rs  lib.rs  normalizer.rs  scanner.rs  session.rs
crates/adapter-claude-code/tests/: contract.rs
crates/adapter-codex/: Cargo.toml
crates/adapter-codex/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs  session.rs
crates/adapter-codex/tests/: contract.rs
crates/adapter-generic-mcp/: Cargo.toml
crates/adapter-generic-mcp/src/: detector.rs  lib.rs  normalizer.rs
crates/adapter-generic-mcp/tests/: contract.rs  loopback.rs
crates/adapter-ghast/: Cargo.toml
crates/adapter-ghast/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-ghast/tests/: contract.rs
crates/adapter-hermes/: Cargo.toml
crates/adapter-hermes/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-hermes/tests/: contract.rs
crates/adapter-letta/: Cargo.toml
crates/adapter-letta/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-letta/tests/: contract.rs
crates/adapter-mem0/: Cargo.toml
crates/adapter-mem0/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-mem0/tests/: contract.rs
crates/adapter-memary/: Cargo.toml
crates/adapter-memary/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-memary/tests/: contract.rs
crates/adapter-memori/: Cargo.toml
crates/adapter-memori/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-memori/tests/: contract.rs
crates/adapter-memos/: Cargo.toml
crates/adapter-memos/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-memos/tests/: contract.rs
crates/adapter-mempalace/: Cargo.toml
crates/adapter-mempalace/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-mempalace/tests/: contract.rs
crates/adapter-openclaw/: Cargo.toml
crates/adapter-openclaw/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-openclaw/tests/: contract.rs
crates/adapter-openviking/: Cargo.toml
crates/adapter-openviking/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-openviking/tests/: contract.rs
crates/adapter-tdai/: Cargo.toml
crates/adapter-tdai/src/: detector.rs  lib.rs  normalizer.rs  scanner.rs
crates/adapter-tdai/tests/: contract.rs
crates/cli/: Cargo.toml
crates/cli/src/: adapters.rs  export_letta.rs  main.rs  near_merge_preview.rs  watch.rs  watch_service.rs
crates/cli/tests/: cli.rs  conflicts.rs  dedupe.rs  e2e_claude_code.rs  e2e_cross_source.rs  eval_quality.rs  forget.rs  import_generic_mcp.rs  import_reconcile_export.rs  reconcile.rs  reconcile_export.rs  serve_sse.rs  tag_record.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  audit.rs  chunk.rs  chunker.rs  config.rs  contract.rs  discovery.rs  embedding.rs  error.rs  lib.rs  model.rs  query.rs  watch.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs  local.rs  registry.rs  voyage.rs  worker.rs
crates/export/: Cargo.toml
crates/export/src/: claude_code_exporter.rs  lib.rs  memos_exporter.rs  sqlite_exporters.rs  tdai_exporter.rs  text_exporters.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: anthropic.rs  gate.rs  lib.rs  openai.rs  prompt.rs  provider.rs  retry.rs  stage2.rs
crates/importer/: Cargo.toml
crates/importer/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: adapter_discovery.rs  lib.rs  main.rs  protocol.rs  server.rs  sse.rs  stdio.rs
crates/mcp-server/tests/: accept_conflict_variant.rs  audit_tail.rs  dedupe.rs  discover_adapters.rs  export_memories.rs  forget_record.rs  get_record_lineage.rs  http.rs  import_source.rs  list_conflicts.rs  list_forgotten_counts.rs  list_sources_filter.rs  reconcile_export_bucket.rs  reconcile_sources.rs  search_explain.rs  source_show.rs  stdio.rs  tag_record.rs
crates/search/: Cargo.toml
crates/search/benches/: hybrid_search.rs  pack_long_records.rs
crates/search/src/: eval.rs  hybrid.rs  lib.rs  packer.rs
crates/store/: Cargo.toml
crates/store/benches/: search_chunks_vec.rs
crates/store/src/: api.rs  cjk.rs  lib.rs  near_merge_preview.rs  semantic_dedupe.rs  vec_ext.rs
crates/store/src/migrations/: 0001_init.sql  0002_phase1.sql  0003_cjk_fts.sql  0004_provenance_derived_from.sql  0005_vec_index.sql  0006_mcp_request_metrics.sql  0007_record_tombstones.sql  0008_records_raw_hash_index.sql  0009_user_record_tags.sql  0010_vec_record_id_metadata.sql  0011_tombstone_derived_from.sql
docs/: BLUEPRINT.md  INTEGRATIONS.md
docs/demo/: quickstart.sh
docs/verification/: round-6-embedding-dogfood.md
packaging/: README.md
packaging/homebrew/: anamnesis.rb
