[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/embedder",
    "crates/search",
    "crates/importer",
    "crates/cli",
    "crates/mcp-server",
    "crates/adapter-claude-code",
    "crates/adapter-codex",
    "crates/adapter-generic-mcp",
    "crates/adapter-mem0",
    "crates/adapter-letta",
    "crates/adapter-hermes",
    "crates/adapter-openclaw",
    "crates/adapter-ghast",
    "crates/adapter-tdai",
    "crates/adapter-openviking",
    "crates/adapter-mempalace",
    "crates/adapter-memori",
    "crates/adapter-memos",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["The Anamnesis Authors"]
repository = "https://github.com/Trapezohe/Anamnesis"
homepage = "https://github.com/Trapezohe/Anamnesis"
readme = "README.md"

[workspace.dependencies]
# Internal crates
anamnesis-core = { path = "crates/core", version = "0.0.2" }
anamnesis-store = { path = "crates/store", version = "0.0.2" }
anamnesis-embedder = { path = "crates/embedder", version = "0.0.2", default-features = false }
anamnesis-search = { path = "crates/search", version = "0.0.2" }
anamnesis-importer = { path = "crates/importer", version = "0.0.2" }
anamnesis-adapter-claude-code = { path = "crates/adapter-claude-code", version = "0.0.2" }
anamnesis-adapter-codex = { path = "crates/adapter-codex", version = "0.0.2" }
anamnesis-adapter-generic-mcp = { path = "crates/adapter-generic-mcp", version = "0.0.2" }
anamnesis-adapter-mem0 = { path = "crates/adapter-mem0", version = "0.0.2" }
anamnesis-adapter-letta = { path = "crates/adapter-letta", version = "0.0.2" }
anamnesis-adapter-hermes = { path = "crates/adapter-hermes", version = "0.0.2" }
anamnesis-adapter-openclaw = { path = "crates/adapter-openclaw", version = "0.0.2" }
anamnesis-adapter-ghast = { path = "crates/adapter-ghast", version = "0.0.2" }
anamnesis-adapter-tdai = { path = "crates/adapter-tdai", version = "0.0.2" }
anamnesis-adapter-openviking = { path = "crates/adapter-openviking", version = "0.0.2" }
anamnesis-adapter-mempalace = { path = "crates/adapter-mempalace", version = "0.0.2" }
anamnesis-adapter-memori = { path = "crates/adapter-memori", version = "0.0.2" }
anamnesis-adapter-memos = { path = "crates/adapter-memos", version = "0.0.2" }
anamnesis-mcp-server = { path = "crates/mcp-server", version = "0.0.2", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing / IDs
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
