[package]
name = "anamnesis-adapter-claude-code"
description = "Anamnesis adapter for Claude Code (~/.claude/projects)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
filetime = "0.2"
