[package]
name = "anamnesis-adapter-hermes"
description = "Anamnesis adapter for Hermes Agent (Nous Research) — reads ~/.hermes/{MEMORY,USER}.md + the SQLite session store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
