[package]
name = "anamnesis-adapter-memori"
description = "Anamnesis adapter for Memori (MemoriLabs/Memori) — reads SQLite-backed entity facts, process attributes, conversation messages, conversation summaries, and KG triples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
