[package]
name = "anamnesis-adapter-mempalace"
description = "Anamnesis adapter for MemPalace — reads identity.txt + the ChromaDB-backed palace (drawers/closets) at ~/.mempalace/"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
