[package]
name = "anamnesis-adapter-openviking"
description = "Anamnesis adapter for OpenViking (volcengine/OpenViking) — reads the VikingFS AGFS layout (resources/user/agent/session × L0/L1/L2)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true }
