[package]
name = "anamnesis-adapter-tdai"
description = "Anamnesis adapter for TencentDB Agent Memory — reads the 4-tier (refs/L0, jsonl/L1, scenarios/L2, persona/L3) layout under ~/.openclaw/memory-tdai/"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true }
