[package]
name = "anamnesis-cli"
description = "Command-line interface for Anamnesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "anamnesis"
path = "src/main.rs"

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
anamnesis-embedder = { workspace = true, default-features = false }
anamnesis-importer = { workspace = true }
anamnesis-search = { workspace = true }
anamnesis-adapter-claude-code = { workspace = true }
anamnesis-adapter-codex = { workspace = true }
anamnesis-adapter-mem0 = { workspace = true }
anamnesis-mcp-server = { workspace = true, default-features = false }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }

[features]
default = ["local-fastembed"]
local-fastembed = ["anamnesis-embedder/local-fastembed", "anamnesis-mcp-server/local-fastembed"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { workspace = true }
