[package]
name = "anamnesis-cli"
description = "Command-line interface for Anamnesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "anamnesis"
path = "src/main.rs"

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
anamnesis-embedder = { workspace = true, default-features = false }
anamnesis-importer = { workspace = true }
anamnesis-extractor = { workspace = true }
anamnesis-export = { workspace = true }
anamnesis-search = { workspace = true }
anamnesis-adapter-claude-code = { workspace = true }
anamnesis-adapter-codex = { workspace = true }
anamnesis-adapter-mem0 = { workspace = true }
anamnesis-adapter-letta = { workspace = true }
anamnesis-adapter-hermes = { workspace = true }
anamnesis-adapter-openclaw = { workspace = true }
anamnesis-adapter-tdai = { workspace = true }
anamnesis-adapter-openviking = { workspace = true }
anamnesis-adapter-mempalace = { workspace = true }
anamnesis-adapter-memori = { workspace = true }
anamnesis-adapter-memos = { workspace = true }
anamnesis-adapter-memary = { workspace = true }
anamnesis-adapter-generic-mcp = { workspace = true }
anamnesis-mcp-server = { workspace = true, default-features = false }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }

[features]
default = ["local-fastembed", "sse", "openai-provider", "anthropic-provider"]
local-fastembed = ["anamnesis-embedder/local-fastembed", "anamnesis-mcp-server/local-fastembed"]
# Wires `anamnesis serve --sse <port>` to the in-process MCP HTTP
# transport. Off → CLI still builds, but `--sse` errors at runtime.
sse = ["anamnesis-mcp-server/sse"]
# Pulls in the real OpenAI-compatible HTTP provider for
# `anamnesis extract --provider openai`. Off → the CLI builds without
# `reqwest` and the openai provider path errors at runtime with a
# pointer to the feature flag.
openai-provider = ["anamnesis-extractor/openai-provider"]
# Pulls in the native Anthropic Messages API provider for
# `anamnesis extract --provider anthropic`. Off → the anthropic path
# errors at runtime with a feature-flag hint.
anthropic-provider = ["anamnesis-extractor/anthropic-provider"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
