[package]
name = "anamnesis-export"
description = "Shared exporters for Anamnesis records (jsonl, csv, mem0-sqlite, letta-sqlite)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
