[package]
name = "anamnesis-extractor"
description = "Two-stage extractor: turn Episode records into Fact / Preference / Feedback / Skill records (Stage 1 deterministic gate now; Stage 2 LLM step coming in a follow-up PR)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
