[package]
name = "anamnesis-extractor"
description = "Two-stage extractor: turn Episode records into Fact / Preference / Feedback / Skill records (Stage 1 deterministic gate + Stage 2 LLM-driven distillation via a pluggable LlmProvider trait)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Real OpenAI-compatible HTTP provider. Off by default — when on,
# pulls `reqwest` so consumers that don't need it (e.g. tests, the
# MockProvider path) stay dep-light.
openai-provider = ["dep:reqwest"]
# Native Anthropic Messages API provider. Different wire format from
# OpenAI (`/v1/messages` not `/v1/chat/completions`, `x-api-key` not
# bearer auth), so it gets its own feature flag. Reuses `reqwest`.
anthropic-provider = ["dep:reqwest"]

[dependencies]
anamnesis-core = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Gated behind the `openai-provider` feature so the MockProvider build
# stays minimal. `rustls-tls` (not the system openssl) so static
# builds and cross-compilation keep working.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
