[package]
name = "anamnesis-mcp-server"
description = "MCP server exposing Anamnesis to any MCP-aware agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "anamnesis-mcp"
path = "src/main.rs"

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
anamnesis-search = { workspace = true }
anamnesis-embedder = { workspace = true, default-features = false }
anamnesis-importer = { workspace = true }
anamnesis-adapter-claude-code = { workspace = true }
anamnesis-adapter-mem0 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[features]
default = ["local-fastembed"]
local-fastembed = ["anamnesis-embedder/local-fastembed"]

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
