[package]
name = "anamnesis-mcp-server"
description = "MCP server exposing Anamnesis to any MCP-aware agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "anamnesis-mcp"
path = "src/main.rs"

[features]
default = ["local-fastembed", "sse"]
local-fastembed = ["anamnesis-embedder/local-fastembed"]
# `sse` pulls in axum for the HTTP/SSE transport. Off → stdio-only build.
sse = ["dep:axum", "dep:tower-http", "dep:rand", "dep:tokio-stream"]

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
anamnesis-search = { workspace = true }
anamnesis-embedder = { workspace = true, default-features = false }
anamnesis-importer = { workspace = true }
anamnesis-export = { workspace = true }
anamnesis-adapter-claude-code = { workspace = true }
anamnesis-adapter-codex = { workspace = true }
anamnesis-adapter-mem0 = { workspace = true }
anamnesis-adapter-letta = { workspace = true }
anamnesis-adapter-hermes = { workspace = true }
anamnesis-adapter-openclaw = { workspace = true }
anamnesis-adapter-tdai = { workspace = true }
anamnesis-adapter-openviking = { workspace = true }
anamnesis-adapter-mempalace = { workspace = true }
anamnesis-adapter-memori = { workspace = true }
anamnesis-adapter-memos = { workspace = true }
anamnesis-adapter-memary = { workspace = true }
anamnesis-adapter-generic-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
parking_lot = "0.12"

# Optional — gated behind `sse`.
axum = { version = "0.7", optional = true, features = ["macros"] }
tower-http = { version = "0.5", optional = true, default-features = false, features = ["trace"] }
rand = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { workspace = true }
