[package]
name = "anamnesis-search"
description = "Hybrid retrieval (FTS5 + vector + RRF) and context packing over the Anamnesis store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
anamnesis-store = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "hybrid_search"
harness = false
test = false

[[bench]]
name = "pack_long_records"
harness = false
test = false
