[package]
name = "anamnesis-store"
description = "SQLite-backed storage layer for Anamnesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anamnesis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true, features = ["functions"] }
sqlite-vec = { workspace = true }
parking_lot = "0.12"
jieba-rs = "0.7"
# Round 131 (PR-78az): blake3 powers the near-duplicate detector's
# token-level SimHash. Reuses the same hash family the rest of the
# project uses for `raw_hash` / `content_hash`.
blake3 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_chunks_vec"
harness = false
test = false
